--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "5.13.0",
+    "@mui/system": "^5.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
