--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
