--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ variables:
     - tags
   rule_latest:
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+-release$/'
-  rule_alpha:
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+-alpha-\d+$/'
+  # rule_alpha:
+  #   - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+-alpha-\d+$/'
   rule_beta:
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+-beta-\d+$/'
 
@@ -35,33 +35,33 @@ variables:
     - eval "$(ssh-agent -s)"
     - ssh-add ~/.ssh/id_rsa
 
-alpha_build_and_push_ecr:
-  stage: build
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
-  <<: *build_push_ecr
-  variables:
-    ENV_FILE: .env.alpha
-  script:
-    - docker build --build-arg ENV_FILE=$ENV_FILE -t $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG} .
-    - docker push $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}
-  rules: !reference [.ref, rule_alpha]
+# alpha_build_and_push_ecr:
+#   stage: build
+#   image: docker:20.10.16
+#   services:
+#     - docker:20.10.16-dind
+#   <<: *build_push_ecr
+#   variables:
+#     ENV_FILE: .env.alpha
+#   script:
+#     - docker build --build-arg ENV_FILE=$ENV_FILE -t $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG} .
+#     - docker push $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}
+#   rules: !reference [.ref, rule_alpha]
 
-alpha_deploy_ec2:
-  stage: deploy
-  image: docker:20.10.16
-  services:
-    - docker:20.10.16-dind
-  <<: *deploy_ec2
-  variables:
-    SSH_PRIVATE_KEY: $ALPHA_SSH_PRIVATE_KEY
-  script:
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker stop vendor || true && docker rm vendor || true"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker pull $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}"
-    - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker run -d -p 3000:3000 --name vendor $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}"
-  rules: !reference [.ref, rule_alpha]
+# alpha_deploy_ec2:
+#   stage: deploy
+#   image: docker:20.10.16
+#   services:
+#     - docker:20.10.16-dind
+#   <<: *deploy_ec2
+#   variables:
+#     SSH_PRIVATE_KEY: $ALPHA_SSH_PRIVATE_KEY
+#   script:
+#     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPOSITORY"
+#     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker stop vendor || true && docker rm vendor || true"
+#     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker pull $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}"
+#     - ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no $EC2_USER@$ALPHA_EC2_INSTANCE_IP "docker run -d -p 3000:3000 --name vendor $ECR_REPOSITORY/$ALPHA_ECR_NAME:${CI_COMMIT_TAG}"
+#   rules: !reference [.ref, rule_alpha]
 
 beta_build_and_push_ecr:
   stage: build
