--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
