--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
     "papaparse": "^5.5.3",
+    "pusher-js": "^8.4.0",
     "react": "^19.1.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
