--- a/.env.beta
+++ b/.env.beta
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=https://be.atlas.galvanek-bau.de/gesys
+VITE_REACT_APP_PUSHER_KEY="b77496881eab64ee5d0a"
+VITE_REACT_APP_PUSHER_CLUSTER="ap1"
