--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ beta_build_and_push_ecr:
     ENV_FILE: .env.beta
   script:
     - echo "" >> $ENV_FILE
-    - echo "REACT_APP_VERSION_TAG=${CI_COMMIT_TAG}" >> $ENV_FILE
+    - echo "VITE_REACT_APP_VERSION_TAG=${CI_COMMIT_TAG}" >> $ENV_FILE
     - docker build --build-arg ENV_FILE=$ENV_FILE -t $ECR_REPOSITORY/$BETA_ECR_NAME:${CI_COMMIT_TAG} .
     - docker push $ECR_REPOSITORY/$BETA_ECR_NAME:${CI_COMMIT_TAG}
   rules: !reference [.ref, rule_beta]
