--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_REACT_APP_PUSHER_KEY="b77496881eab64ee5d0a"
 VITE_REACT_APP_PUSHER_CLUSTER="ap1"
 VITE_REACT_APP_VERSION_TAG="v0.0.1-alpha-19"
-VITE_API_BASE_URL=https://be.atlas.galvanek-bau.de/gesys
+VITE_API_BASE_URL=https://alpha.be.atlas.galvanek-bau.de/gesys
