--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "papaparse": "^5.5.3",
     "pusher-js": "^8.4.0",
     "react": "^19.1.0",
