--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,7 +100,7 @@ prod_build_and_push_ecr:
     - docker:20.10.16-dind
   <<: *build_push_ecr
   variables:
-    ENV_FILE: .env.beta
+    ENV_FILE: .env.prod
   script:
     - echo "" >> $ENV_FILE
     - echo "VITE_REACT_APP_VERSION_TAG=${CI_COMMIT_TAG}" >> $ENV_FILE
