--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
+    "antd": "^5.28.0",
     "dayjs": "^1.11.18",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
