refactor vendor onboarding

--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ VITE_REACT_APP_PUSHER_CLUSTER="ap1"
 VITE_REACT_APP_VERSION_TAG="v0.0.1-alpha-33"
 VITE_API_BASE_URL=https://alpha.be.atlas.galvanek-bau.de/gesys
 VITE_REACT_APP_REDIRECT_URL=https://alpha.atlas.galvanek-bau.de
+
+# MAP
+VITE_REACT_APP_GEOAPIFY_KEY="68b5abb94c99418b97c7a36734a48c3f"
+VITE_REACT_APP_MAP_API='https://nominatim.openstreetmap.org'
+VITE_REACT_APP_GEOAPIFY_MAP_API='https://api.geoapify.com'
