--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@mui/icons-material": "^7.1.0",
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
-    "antd": "^5.28.0",
+    "antd": "^5.29.3",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.18",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "leaflet": "^1.9.4",
     "mui": "^0.0.1",
     "papaparse": "^5.5.3",
     "pusher-js": "^8.4.0",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-i18next": "^15.5.2",
-    "react-router-dom": "^7.6.0"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^7.6.0",
+    "sass": "^1.97.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
