Refactor code structure for improved readability and maintainability

--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ VITE_API_BASE_URL=https://alpha.be.atlas.galvanek-bau.de/gesys
 VITE_REACT_APP_REDIRECT_URL=https://alpha.atlas.galvanek-bau.de
 
 # MAP
-VITE_REACT_APP_GEOAPIFY_KEY="68b5abb94c99418b97c7a36734a48c3f"
+VITE_GEOAPIFY="51c4deb37ab3486486d05ea76bf844b7"
 VITE_REACT_APP_MAP_API='https://nominatim.openstreetmap.org'
 VITE_REACT_APP_GEOAPIFY_MAP_API='https://api.geoapify.com'
