--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "5.13.0",
     "@mui/system": "^5.1.1",
+    "@types/leaflet": "^1.9.21",
     "antd": "^5.29.3",
     "axios": "^1.13.2",
     "dayjs": "^1.11.18",
