--- a/.env.alpha
+++ b/.env.alpha
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL = https://alpha.be.atlas.galvanek-bau.de
 VITE_REACT_APP_REDIRECT_URL = https://alpha.atlas.galvanek-bau.de
+VITE_GEOAPIFY="51c4deb37ab3486486d05ea76bf844b7"
