--- a/.env.beta
+++ b/.env.beta
@@ -2,3 +2,4 @@ VITE_API_BASE_URL=https://beta.be.atlas.galvanek-bau.de/gesys
 VITE_REACT_APP_PUSHER_KEY="71344b42140efd6f7f20"
 VITE_REACT_APP_PUSHER_CLUSTER="ap1"
 VITE_REACT_APP_REDIRECT_URL=https://beta.atlas.galvanek-bau.de
+VITE_GEOAPIFY="51c4deb37ab3486486d05ea76bf844b7"
