feat: Add country calling code and flag icons support in CompanyDetail component

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/leaflet": "^1.9.21",
     "antd": "^5.29.3",
     "axios": "^1.13.2",
+    "country-calling-code": "^0.0.3",
     "dayjs": "^1.11.18",
+    "flag-icons": "^7.5.0",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
